Fix scrolling of input that overflows the calc screen

--- a/css/style.css
+++ b/css/style.css
@@ -177,8 +177,8 @@ button:hover {
 
 #calc--history {
 	position: relative;
-	overflow-y: auto;
-	overflow-x: visible;
+	overflow-y: hidden;
+	overflow-x: auto;
 	
 	width: 288px;
 	height: 50px;
@@ -200,9 +200,9 @@ button:hover {
 }
 
 #calc--total-output {
-	overflow-y: auto;
+	overflow-y: hidden;
 	
-	overflow-x: hidden;
+	overflow-x: auto;
 	position: relative;
 	white-space: nowrap;
 	
